test/TestSuite/Scheduler/Errors/task_overspecified_1.tjp
project test "Test" "1.0" 2008-02-03 +1m

# MARK: error 4 task_overspecified
task t "T" {
  start 2008-02-04
  length 2d
  end 2008-02-06
}

